[package]
name = "wasmi"
version = "0.4.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "/res/*", "/tests/*", "/fuzz/*", "/benches/*" ]

[dependencies]
parity-wasm             = { version = "0.31", default-features = false }
byteorder		= { git = "https://github.com/baidu/rust-sgx-sdk" }
memory_units 		= "0.4.0"
nan-preserving-float 	= { git = "https://github.com/baidu/rust-sgx-sdk" }
serde 			= { git = "https://github.com/baidu/rust-sgx-sdk" }
serde_derive 		= { git = "https://github.com/baidu/rust-sgx-sdk" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk" }
